converted to webp

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 }
 
 #my-content{
-    background-color: #E5FDD1;
+    background-color: #ffffff;
     position: fixed;
     left: 50%;
     top: 50%;
